--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@serverless/typescript": "^2.23.0",
     "@types/aws-lambda": "^8.10.71",
     "@types/node": "^14.14.25",
+    "jest": "^27.5.1",
     "serverless": "^3.12.0",
     "serverless-webpack": "^5.3.5",
+    "ts-jest": "^27.1.4",
     "ts-loader": "^8.0.15",
     "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
