--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "engines": {
     "node": ">=14.15.0"
   },
+  "scripts": {
+    "test": "jest --runInBand"
+  },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.58.0",
     "@aws-sdk/client-sns": "^3.58.0",
@@ -16,6 +19,7 @@
   "devDependencies": {
     "@serverless/typescript": "^2.23.0",
     "@types/aws-lambda": "^8.10.71",
+    "@types/jest": "^27.4.1",
     "@types/node": "^14.14.25",
     "jest": "^27.5.1",
     "serverless": "^3.12.0",
