--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "source-map-support": "^0.5.19"
   },
   "devDependencies": {
+    "@faker-js/faker": "^6.1.2",
     "@serverless/typescript": "^2.23.0",
     "@types/aws-lambda": "^8.10.71",
+    "@types/factory-girl": "^5.0.8",
     "@types/jest": "^27.4.1",
     "@types/node": "^14.14.25",
+    "factory-girl": "^5.0.4",
     "jest": "^27.5.1",
     "serverless": "^3.12.0",
     "serverless-webpack": "^5.3.5",
