--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@notifee/react-native": "^5.1.0",
     "expo": "~44.0.0",
     "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
