Add android configurations

--- a/app/app.json
+++ b/app/app.json
@@ -20,10 +20,12 @@
       "supportsTablet": true
     },
     "android": {
+      "googleServicesFile": "./google-services.json",
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
       },
+      "package": "comixnotifier.com.br"
     },
     "web": {
       "favicon": "./assets/favicon.png"
