--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@notifee/react-native": "^5.1.0",
+    "@react-native-firebase/app": "^14.7.0",
+    "@react-native-firebase/messaging": "^14.7.0",
     "dotenv": "^16.0.0",
     "expo": "~44.0.0",
     "expo-splash-screen": "~0.14.1",
