--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
     "@notifee/react-native": "^5.1.0",
     "@react-native-firebase/app": "^14.7.0",
     "@react-native-firebase/messaging": "^14.7.0",
+    "axios": "^0.26.1",
     "dotenv": "^16.0.0",
     "expo": "~44.0.0",
     "expo-splash-screen": "~0.14.1",
