--- a/package.json
+++ b/package.json
@@ -24,8 +24,15 @@
     "@types/factory-girl": "^5.0.8",
     "@types/jest": "^27.4.1",
     "@types/node": "^14.14.25",
+    "eslint": "^8.13.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-typescript": "^2.7.1",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "factory-girl": "^5.0.4",
     "jest": "^27.5.1",
+    "prettier": "^2.6.2",
     "serverless": "^3.12.0",
     "serverless-webpack": "^5.3.5",
     "ts-jest": "^27.1.4",
