--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@aws-sdk/client-dynamodb": "^3.58.0",
     "@aws-sdk/client-sns": "^3.58.0",
     "@aws-sdk/util-dynamodb": "^3.58.0",
+    "aws-lambda": "^1.0.7",
     "axios": "^0.26.1",
     "source-map-support": "^0.5.19",
     "zod": "^3.14.4"
@@ -24,6 +25,8 @@
     "@types/factory-girl": "^5.0.8",
     "@types/jest": "^27.4.1",
     "@types/node": "^14.14.25",
+    "@typescript-eslint/eslint-plugin": "^5.20.0",
+    "@typescript-eslint/parser": "^5.20.0",
     "eslint": "^8.13.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.5.0",
