--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.26.1",
     "dotenv": "^16.0.0",
     "expo": "~44.0.0",
+    "expo-constants": "^13.0.2",
     "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
