Update environment variable name

--- a/app/.env.example
+++ b/app/.env.example
@@ -1,1 +1,1 @@
-SUBSCRIPTION_URL=https://fswh4gg88b.execute-api.us-east-1.amazonaws.com/dev/subscribe
+EXPO_PUBLIC_SUBSCRIPTION_URL=https://fswh4gg88b.execute-api.us-east-1.amazonaws.com/dev/subscribe
