Rename and update configs

--- a/app/app.json
+++ b/app/app.json
@@ -1,21 +1,15 @@
 {
   "expo": {
     "name": "Comix Notifier",
-    "plugins": [
-      "@react-native-firebase/app",
-      "@notifee/react-native"
-    ],
     "slug": "ComixNotifier",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
+    "userInterfaceStyle": "light",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
-    },
-    "updates": {
-      "fallbackToCacheTimeout": 0
     },
     "assetBundlePatterns": [
       "**/*"
@@ -27,7 +21,7 @@
       "googleServicesFile": "./google-services.json",
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#FFFFFF"
+        "backgroundColor": "#ffffff"
       },
       "package": "comixnotifier.com.br"
     },
