--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/node": "^20.12.7",
     "@typescript-eslint/eslint-plugin": "^7.7.0",
     "@typescript-eslint/parser": "^7.7.0",
+    "esbuild": "^0.14.11",
     "eslint": "^8.13.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^9.1.0",
@@ -36,14 +37,11 @@
     "jest": "^29.7.0",
     "prettier": "^3.2.5",
     "serverless": "^3.12.0",
-    "serverless-webpack": "^5.3.5",
+    "serverless-esbuild": "^1.23.3",
     "ts-jest": "^29.1.2",
     "ts-loader": "^9.2.8",
     "ts-node": "^10.7.0",
     "tsconfig-paths": "^4.0.0",
-    "tsconfig-paths-webpack-plugin": "^4.1.0",
-    "typescript": "^5.4.5",
-    "webpack": "^5.20.2",
-    "webpack-node-externals": "^3.0.0"
+    "typescript": "^5.4.5"
   }
 }
